# energia-prep-2-public

./: .gitignore  README.md  config_form.yaml  docker-compose.yml  pyproject.toml
docker/: .dockerignore  Dockerfile  entrypoint.sh
sql/00_init/: 00_prechecks.sql  01_util_schema.sql  02_util_grants.sql
sql/10_schemas/: 01_bootstrap_schemas.sql
sql/20_tables/: 01_input_tables.sql  02_tge_tables.sql  03_params_tables.sql  04_support_tables.sql
sql/25_functions/: 01_run_after_wait.sql  01_wait_final_stage_done.sql
sql/30_views/: 00_output_energy_base.sql  01_output_energy_broker_detail.sql  02_output_energy_soc_oze.sql  03_output_energy_soc_arbi.sql  04_output_energy_store_summary.sql  05a_output_obliczenia_pln_mag_i_oze.sql  05b_output_obliczenia_pln_oze.sql  05c_output_obliczenia_pln_grid.sql  06_output_obliczenia_pln_summary.sql
sql/30_views (depreciated)/: 00_output_energy_base.sql  01_output_energy_broker_detail.sql  02_output_energy_soc_oze.sql  03_output_energy_soc_arbi.sql  04_output_energy_store_summary.sql  05a_output_obliczenia_pln_mag_i_oze.sql  05b_output_obliczenia_pln_oze.sql  05c_output_obliczenia_pln_grid.sql  06_output_obliczenia_pln_summary.sql
sql/40_triggers/: 01_notify_autotriggers.sql
sql/90_finalize/: 01_post_grants.sql  02_validate.sql
src/energia_prep2/: __init__.py  app_server.py  cfg.py  db.py  health_api.py  log.py  main.py
src/energia_prep2/calc/: 00_snapshot.py  01_ingest.py  02_proposer.py  03_commit.py  04_pricing.py  04b_pricing_dyst.py  05_persist.py  io.py  (+12 more)
tests/: test_cfg.py  test_csv_detect.py  test_sql_order.py
(+11 files in other folders)
